--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@prisma/adapter-pg": "^7.2.0",
+    "@react-email/components": "^1.0.4",
+    "@react-email/render": "^2.0.2",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
     "@supabase/supabase-js": "^2.89.0",
+    "@types/react-datepicker": "^6.2.0",
     "@types/three": "^0.182.0",
     "bcryptjs": "^3.0.3",
     "clsx": "^2.1.1",
+    "cron-parser": "^5.4.0",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.23.26",
@@ -33,9 +37,11 @@
     "postcss": "^8.5.6",
     "qrcode.react": "^4.2.0",
     "react": "19.2.3",
+    "react-datepicker": "^9.1.0",
     "react-dom": "19.2.3",
     "react-icons": "^5.5.0",
     "recharts": "^3.6.0",
+    "resend": "^6.7.0",
     "tailwind-merge": "^3.4.0",
     "three": "^0.182.0",
     "zod": "^4.3.5"
