--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
     "@supabase/supabase-js": "^2.89.0",
+    "@types/qrcode": "^1.5.6",
     "@types/react-datepicker": "^6.2.0",
     "@types/three": "^0.182.0",
     "bcryptjs": "^3.0.3",
@@ -35,6 +36,7 @@
     "next-themes": "^0.4.6",
     "pg": "^8.16.3",
     "postcss": "^8.5.6",
+    "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "react": "19.2.3",
     "react-datepicker": "^9.1.0",
