--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,3 @@
 {
-    "crons": [
-        {
-            "path": "/api/cron/send-scheduled",
-            "schedule": "*/5 * * * *"
-        },
-        {
-            "path": "/api/cron/triggers",
-            "schedule": "0 * * * *"
-        }
-    ]
+    "crons": []
 }
