--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
     "@supabase/supabase-js": "^2.89.0",
+    "@types/nodemailer": "^7.0.10",
     "@types/qrcode": "^1.5.6",
     "@types/react-datepicker": "^6.2.0",
     "@types/three": "^0.182.0",
@@ -35,6 +36,7 @@
     "next": "16.1.1",
     "next-auth": "^5.0.0-beta.30",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.13",
     "pg": "^8.16.3",
     "postcss": "^8.5.6",
     "qrcode": "^1.5.4",
